# agentic-debug-tools

./: .gitignore  AGENTS.md  CHANGES.md  INTEGRATION.md  README.md  app.py  config.example.yaml  pyproject.toml
.kiro/hooks/: error-logging-check.json  test-after-change.json
.kiro/steering/: error-logging.md
flask_error_tracker/: __init__.py  blueprint.py  database.py
flask_error_tracker/static/: debug-button.js  error-collector.js
flask_error_tracker/templates/: error_log.html
tests/: test_error_tracker.py
