[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-error-tracker"
version = "1.0.0"
description = "Unified error logging, tracking, and debugging dashboard for Flask applications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "flask>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["flask_error_tracker*"]

[tool.setuptools.package-data]
flask_error_tracker = ["templates/*.html", "static/*.js"]
