[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-debug-tools"
version = "2026.02.18"
description = "Agentic Debug Tools — error logging, tracking, and floating debug button for Flask apps. Built for AI-assisted development workflows."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "flask>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["flask_error_tracker*"]

[tool.setuptools.package-data]
flask_error_tracker = ["templates/*.html", "static/*.js"]
